--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "authoritative_server"
-version = "0.1.0"
+version = "0.1.1-dev"
 edition = "2024"
 default-run = "authoritative_server"
 
