--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ bevy_simplenet = "0.16.0"
 futures-util = "0.3.31"
 tokio = { version = "1.47.1", features = ["full"] }
 tokio-tungstenite = "0.27.0"
+uuid = { version = "1.18.0", features = ["v4"] }
 
 [[bin]]
 name = "test"
